<resources>
    <string name="app_name">功夫贷</string>
    <string name="loading_dialog_message">加载中&#8230;</string>
    <string name="loacatioin_dialog_message">定位中&#8230;</string>

    <string name="pick_photo">选择图片</string>
    <string name="pick_no_sdcard">没有sd卡</string>
    <string name="pick_video">选择视频</string>

    <string name="exit_tip">请再按一次退出</string>
    <string name="submit_txt">提交</string>
    <string name="next_step">下一步</string>
    <string name="upload_fail">上传失败!</string>
    <string name="upload_succeed">上传成功!</string>
    <string name="uploading">上传中&#8230;</string>
    <string name="get_token_failed">获取FederationToken失败!</string>
    <string name="location_failed">定位失败</string>

    <!--net error-->
    <string name="server_case_error">系统忙,请稍后重试.</string>
    <string name="generic_server_down">链接超时</string>
    <string name="no_internet">暂无网络</string>
    <string name="generic_error">未知错误</string>

    <!--dialog-->
    <string name="dialog_title">提示</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_konw">我知道了</string>

    <!--login-->
    <string name="login">登陆</string>
    <string name="login_register_fast">快速注册</string>
    <string name="login_register">注册</string>
    <string name="login_logo">Logo</string>
    <string name="login_name">GongFuDai</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_register_agere">同意</string>
    <string name="login_register_protocol">《功夫贷用户注册协议》</string>
    <string name="login_send_verify">发送验证码</string>
    <string name="login_count_down">(%d)秒后重发</string>
    <string name="login_verify_send">我们已将验证码发送到您的手机</string>
    <string name="login_verify_tip">我们将验证码发送到您的手机</string>
    <string name="login_register_pass_hint">6-12位密码</string>
    <string name="login_register_phone">输入11位手机号码</string>
    <string name="login_username_hint">输入用户名</string>
    <string name="login_pass_hint">输入密码</string>
    <string name="login_verify_hint">请输入短信中的验证码</string>

    <!-- home-->
    <string name="home_sw">声望</string>
    <string name="home_qz">钱庄</string>
    <string name="home_mj">秘籍</string>

    <!--info-->
    <string name="info_doing">进行中</string>
    <string name="info_doing_somting">资料处理中，请稍后重试。</string>
    <string name="info_sup">信息补充</string>
    <string name="info_tip">功夫贷将确保您的信息安全,请放心使用</string>
    <string name="info_not_allow">您所在的城市尚未开放功夫贷，请耐心等待，感谢您对功夫贷的支持。</string>
    <string name="info_verify">请先完善个人信息</string>
    <string name="info_ds">电商验证</string>
    <string name="info_lxr">紧急联系人</string>
    <string name="info_sfyz">身份验证</string>
    <string name="info_sfyz_pz">身份证拍照验证</string>
    <string name="info_xxaq">信息安全</string>
    <string name="info_sqed">申请额度</string>
    <string name="info_sqed_tip">您已补全五项信息,请点击申请按钮进行额度估算。如您有多个邮箱/运营商/电商账号,也可以继续补全信息之后再来申请。</string>
    <string name="info_yj">邮箱验证</string>
    <string name="info_yys">运营商验证</string>
    <string name="info_take_photo_tip1">拍摄身份证正面照</string>
    <string name="info_take_photo_tip2">拍摄手持身份证照</string>
    <string name="info_take_photo_tip3">拍摄身份证反面照</string>
    <string name="info_real_name">真实姓名</string>
    <string name="info_idcard">身份证号</string>
    <string name="info_edit">修改</string>
    <string name="info_mobile_phone">手机</string>
    <string name="info_name">姓名</string>
    <string name="info_name_hint">请输入真实姓名</string>
    <string name="info_gx">关系</string>
    <string name="info_qins">亲属</string>
    <string name="info_tongs">同事</string>
    <string name="info_friend">朋友</string>
    <string name="info_email_tip">邮件解析说明</string>
    <string name="info_email_tip2">目前仅支持上述邮件服务商,其他邮箱服务商暂时不支持,敬请期待.请输入含有信用卡账单度邮箱地址,如果由多个邮箱,请重复上述操作.</string>
    <string name="info_operation_tip">运营商验证</string>
    <string name="info_operation_tip2">运营商验证目前只支持浙江及广东用户，其他省市即将开放，敬请期待。验证过程中您有可能收到运营商发送的短信，请根据短信验证码提示的内容进行相关操作。</string>
    <string name="info_ele_tip">电商说明</string>
    <string name="info_ele_tip2">请输入您本人常用的电商网站账户，以便提升声誉。</string>
    <string name="info_btn_jxsq">继续补充</string>
    <string name="info_btn_qrsq">确认申请</string>
    <string name="info_idcard_not_scc">身份验证未补全</string>
    <string name="info_ice_not_scc">紧急联系人未补全</string>
    <string name="info_email_not_scc">邮箱验证未补全</string>
    <string name="info_opr_not_scc">运营商验证未补全</string>
    <string name="info_ele_not_scc">电商验证未补全</string>

    <!-- cheats-->
    <string name="cheats_yhk">银行卡</string>
    <string name="cheats_pj">票券</string>
    <string name="cheats_his">历史交易</string>
    <string name="cheats_news">消息</string>
    <string name="cheats_tq">特权</string>
    <string name="cheats_grxx">个人信息</string>
    <string name="cheats_qdyl">签到有礼</string>
    <string name="cheats_kf">客服</string>
    <string name="cheats_more">更多</string>

    <!--user-->
    <string name="user_info">个人信息</string>
    <string name="user_setting">设置</string>
    <string name="user_name">姓名</string>
    <string name="user_idcard">身份证</string>
    <string name="user_phone">手机号</string>
    <string name="user_email">邮箱</string>
    <string name="user_dszh">电商账号</string>
    <string name="user_jjlxr">紧急联系人</string>
    <string name="user_setting_phone">手机号</string>
    <string name="user_setting_pass_edit">修改密码</string>
    <string name="user_setting_feedback">问题反馈</string>
    <string name="user_setting_ysaq">隐私安全</string>
    <string name="user_setting_lxwm">关于我们</string>

    <!--more popup-->
    <string name="more_popup_sqte">申请提额</string>
    <string name="more_popup_bdyhk">绑定银行卡</string>

</resources>
