<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_register"
        android:textColor="@color/login_word_color"
        android:textSize="@dimen/size_big" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_half"
        android:layout_marginRight="@dimen/padding_half"
        android:background="@drawable/bg_edittext_selector"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_half"
        android:layout_marginRight="@dimen/padding_half"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@drawable/bg_edittext_selector"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/ibtn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_agere" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_protocol" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/btn_submit_selector"
        android:text="@string/next_step"
        android:textColor="@color/btn_submit_txt_selector"
        android:textSize="@dimen/size_title" />

</LinearLayout>