<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:gravity="center"
        android:text="@string/login_register"
        android:textColor="@color/login_word_color"
        android:textSize="@dimen/size_big" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_marginTop="@dimen/width_image"
        android:background="@drawable/bg_edittext_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ico_phone" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_register_phone"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/login_word_color"
            android:textColorHint="@color/login_word_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/bg_edittext_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="23dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:layout_height="wrap_content"
            android:src="@mipmap/ico_pwd" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_register_pass_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textColor="@color/login_word_color"
            android:textColorHint="@color/login_word_color" />

        <ImageButton
            android:id="@+id/ibtn_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding_double"
            android:visibility="invisible"
            android:layout_toLeftOf="@+id/cb_show_pass"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/ico_clear" />

        <CheckBox
            android:id="@+id/cb_show_pass"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_show_pass_selector"
            android:button="@null" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_agere"
            android:textColor="@color/login_word_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_protocol"
            android:textColor="@color/login_btn_send" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_marginTop="@dimen/width_image_info"
        android:background="@drawable/btn_submit_selector"
        android:enabled="false"
        android:text="@string/next_step"
        android:textColor="@color/btn_submit_txt_selector"
        android:textSize="@dimen/size_title" />

</LinearLayout>