<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_idcard"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_idcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_phone"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_email"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_dszh"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_dszh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list_item"
        android:background="@drawable/bg_list_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_jjlxr"
            android:textColor="@color/black_txt"
            android:textSize="@dimen/size_title" />

        <TextView
            android:id="@+id/tv_user_jjlxr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:textSize="@dimen/size_normal" />
    </LinearLayout>
</LinearLayout>