<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/height_cheats"
        android:layout_height="@dimen/height_cheats"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/header_height"
        android:background="@drawable/shape_circle_logo"
        android:gravity="center"
        android:text="@string/login_logo"
        android:textColor="@color/white"
        android:textSize="@dimen/size_big"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_half"
        android:text="@string/login_name"
        android:textColor="@color/line" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_marginLeft="@dimen/padding_half"
        android:layout_marginRight="@dimen/padding_half"
        android:background="@drawable/bg_edittext_selector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_half"
        android:layout_marginRight="@dimen/padding_half"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@drawable/bg_edittext_selector" />

        <ImageButton
            android:id="@+id/ibtn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/btn_submit_selector"
        android:text="@string/login" />
</LinearLayout>